add footer section

--- a/gittwo/hero-section.html
+++ b/gittwo/hero-section.html
@@ -6,6 +6,6 @@
     <title>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur minus similique porro pariatur magni! Aspernatur, magnam voluptatem? Corporis cumque odit, aut, alias ea maxime ducimus praesentium aliquid amet asperiores error?</title>
 </head>
 <body>
-    
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure dolor corporis rerum ullam! Itaque neque quisquam deleniti porro doloremque dignissimos minus, ducimus ut ipsum cum, nulla a sed dolore? Quo!
 </body>
 </html>
